[gd_scene load_steps=7 format=3 uid="uid://crdyanslu6b0r"]

[ext_resource type="Theme" uid="uid://cw6tf7fmqylkj" path="res://ui/theme/MainMenuTheme.tres" id="1_i0hv2"]
[ext_resource type="Script" uid="uid://bxjssm0y45511" path="res://ui/menu/MainMenu.gd" id="1_jlylj"]
[ext_resource type="Theme" uid="uid://ckxlwln5s1u4b" path="res://ui/theme/PauseMenuTheme.tres" id="2_guig7"]
[ext_resource type="Script" uid="uid://db85fb86bo305" path="res://ui/menu/FocusOnHover.gd" id="3_7ml3v"]
[ext_resource type="Theme" uid="uid://cx5y7d1vam7be" path="res://ui/theme/MainMenuLevelsTheme.tres" id="3_c16ul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ml3v"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_i0hv2")
theme_override_styles/panel = SubResource("StyleBoxFlat_7ml3v")
script = ExtResource("1_jlylj")
metadata/_custom_type_script = "uid://vl5uuupklejb"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Levels" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_c16ul")

[node name="LevelButtons" type="HBoxContainer" parent="VBoxContainer/Levels"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Menu" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_guig7")

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/Menu"]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/Menu/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Settings" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Settings
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Settings"]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Quit" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Quit"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons/Quit"]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Buttons2" type="VBoxContainer" parent="VBoxContainer/Menu/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Help" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Help
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons2/Help"]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[node name="Credits" type="Button" parent="VBoxContainer/Menu/GridContainer/Buttons2"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_guig7")
text = "Credits
"

[node name="FocusOnHover" type="Node" parent="VBoxContainer/Menu/GridContainer/Buttons2/Credits"]
script = ExtResource("3_7ml3v")
metadata/_custom_type_script = "uid://db85fb86bo305"

[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons/Settings" to="." method="onSettings"]
[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons/Quit" to="." method="onQuit"]
[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons2/Help" to="." method="onHelp"]
[connection signal="pressed" from="VBoxContainer/Menu/GridContainer/Buttons2/Credits" to="." method="onCredits"]
